POWR-380 Fix delete .git command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,8 +104,8 @@ build_and_deploy: &build_and_deploy
           # Exclude dependencies
           rm -rf web/themes/custom/cloudy/node_modules
           # Without these lines, push will fail with "please remote git submodules" error
-          find ./web/ -name ".git" -type d -exec rm -r "{}" \;
-          find ./vendor/ -name ".git" -type d -exec rm -r "{}" \;
+          find ./web/ -name ".git" -type d -exec rm -rf {} +
+          find ./vendor/ -name ".git" -type d -exec rm -rf {} +
           # Force add all files to include those excluded by .gitignore
           git add -f /var/www/html
           # Pantheon site will use the wrong DB if the local is kept
