--- a/web/sites/default/config/webform.webform.last_thursdays_registration.yml
+++ b/web/sites/default/config/webform.webform.last_thursdays_registration.yml
@@ -168,4 +168,73 @@ access:
     roles: {  }
     users: {  }
     permissions: {  }
-handlers: {  }
+handlers:
+  vendor_confirmation_email:
+    id: email
+    label: 'Vendor confirmation email'
+    handler_id: vendor_confirmation_email
+    status: true
+    conditions: {  }
+    weight: 0
+    settings:
+      states:
+        - completed
+      to_mail: '[webform_submission:values:contact_email:raw]'
+      to_options: {  }
+      cc_mail: ''
+      cc_options: {  }
+      bcc_mail: ''
+      bcc_options: {  }
+      from_mail: noreply@portlandoregon.gov
+      from_options: {  }
+      from_name: 'Last Thursdays on Alberta'
+      subject: 'Registration confirmation for Last Thursdays on Alberta'
+      body: "<p>{{ webform_token('[webform_submission:values:contact_name]', webform_submission) }},</p>\r\n<p>Thank you for registering with Last Thursdays on Alberta. Your registration information is copied below.</p>\r\n{{ webform_token('[webform_submission:values]', webform_submission) }}\r\n<p>Before vending, we recommend checking in with the adjacent business to let them know your plan for the evening. We ask that set-up not begin until 5:00.  From 5:00-6:00, traffic will be free-flowing on Alberta. Do not place anything into the moving travel lane. All intersections must remain clear at all times so that emergency vehicles can access the event in case of emergency. All set up must take place from the sidewalk side. Please do not block the travel lane for loading or unloading your vehicle.</p>\r\n<p>If you have any questions or concerns, please contact Greg Raisman, City of Portland Bureau of Transportation, at <a href=\"mailto:greg.raisman@portlandoregon.gov\">greg.raisman@portlandoregon.gov</a> or <a href=\"tel:503-823-1052\">503-823-1052</a>.</p>\r\n<p>The City of Portland complies with all non‐discrimination, Civil Rights laws including Civil Rights Title VI and ADA Title II. To help ensure equal access to City programs, services and activities, the City of Portland will reasonably modify policies/procedures and provide auxiliary aids/services to persons with disabilities. Call 503-823-2036, TTY 503-823-6868 or Oregon Relay Service: 711 with such requests, or visit http://bit.ly/13EWaCg</p>\r\n\r\n"
+      excluded_elements:
+        accept_requirements: accept_requirements
+      ignore_access: false
+      exclude_empty: true
+      exclude_empty_checkbox: false
+      html: true
+      attachments: false
+      twig: true
+      debug: false
+      reply_to: ''
+      return_path: ''
+      sender_mail: ''
+      sender_name: ''
+      theme_name: ''
+  vendor_notification_email:
+    id: email
+    label: 'Admin notification email'
+    handler_id: vendor_notification_email
+    status: true
+    conditions: {  }
+    weight: 0
+    settings:
+      states:
+        - completed
+      to_mail: michael.mcdonald@portlandoregon.gov
+      to_options: {  }
+      cc_mail: ''
+      cc_options: {  }
+      bcc_mail: ''
+      bcc_options: {  }
+      from_mail: _default
+      from_options: {  }
+      from_name: _default
+      subject: 'New vendor registration for Last Thursdays on Alberta'
+      body: "<p>Submitted on {{ webform_token('[webform_submission:created]', webform_submission) }}</p>\r\n{{ webform_token('[webform_submission:values]', webform_submission) }}\r\n"
+      excluded_elements: {  }
+      ignore_access: false
+      exclude_empty: true
+      exclude_empty_checkbox: false
+      html: true
+      attachments: false
+      twig: true
+      debug: false
+      reply_to: ''
+      return_path: ''
+      sender_mail: ''
+      sender_name: ''
+      theme_name: ''
