POWR-1069 Update messages displayed on pages Reference e-mails sent to vendors

--- a/web/sites/default/config/webform.webform.last_thursdays_registration.yml
+++ b/web/sites/default/config/webform.webform.last_thursdays_registration.yml
@@ -96,7 +96,7 @@ settings:
   draft_loaded_message: ''
   confirmation_type: inline
   confirmation_title: ''
-  confirmation_message: 'Thank you for registering for Last Thursdays on Alberta!'
+  confirmation_message: 'Thank you for registering for Last Thursdays on Alberta!&nbsp; Look for an e-mail confirming your registration with your vendor ID.&nbsp; Please print the email out and have it with you when vending at any Last Thursays on Alberta events.'
   confirmation_url: ''
   confirmation_attributes: {  }
   confirmation_back: true
@@ -110,7 +110,7 @@ settings:
   limit_total_unique: false
   limit_user: 1
   limit_user_interval: null
-  limit_user_message: 'You have already registered for Last Thursdays on Alberta. Thank you!'
+  limit_user_message: 'You have already registered for Last Thursdays on Alberta. Thank you!&nbsp; Look for an e-mail confirming your registration with your vendor ID.&nbsp; Please print the email out and have it with you when vending at any Last Thursays on Alberta events.'
   limit_user_unique: false
   entity_limit_total: null
   entity_limit_total_interval: null
