--- a/web/sites/default/config/search_api.server.searchstax.yml
+++ b/web/sites/default/config/search_api.server.searchstax.yml
@@ -29,9 +29,8 @@ backend_config:
   log_response: 1
   retrieve_data: false
   highlight_data: false
-  excerpt: false
   skip_schema_check: false
   site_hash: false
-  suggest_suffix: true
-  suggest_corrections: true
-  suggest_words: false
+  domain: generic
+  finalize_timeout: 30
+  server_prefix: ''
