POWR-983 Update time format to remove leading zero from hours

--- a/web/sites/default/config/core.entity_view_display.node.event.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.teaser.yml
@@ -9,40 +9,90 @@ dependencies:
     - field.field.node.event.field_end_date
     - field.field.node.event.field_end_time
     - field.field.node.event.field_event_location
+    - field.field.node.event.field_featured_media
     - field.field.node.event.field_group
     - field.field.node.event.field_legacy_path
+    - field.field.node.event.field_related_content
     - field.field.node.event.field_reviewer
+    - field.field.node.event.field_search_keywords
     - field.field.node.event.field_start_date
     - field.field.node.event.field_start_time
     - field.field.node.event.field_summary
     - node.type.event
   module:
+    - ds
+    - panelizer
+    - time_field
     - user
+third_party_settings:
+  panelizer:
+    enable: false
+    custom: false
+    allow: false
+    default: default
 id: node.event.teaser
 targetEntityType: node
 bundle: event
 mode: teaser
 content:
-  content_moderation_control:
-    weight: -20
+  field_all_day:
+    type: boolean
+    weight: 0
     region: content
-    settings: {  }
-    third_party_settings: {  }
-  links:
-    weight: 100
+    label: inline
+    settings:
+      format: custom
+      format_custom_true: 'All day'
+      format_custom_false: ''
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_end_time:
+    type: time_formatter
+    weight: 2
     region: content
-    settings: {  }
-    third_party_settings: {  }
+    label: inline
+    settings:
+      time_format: 'g:i a'
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_start_time:
+    type: time_formatter
+    weight: 1
+    region: content
+    label: inline
+    settings:
+      time_format: 'g:i a'
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 hidden:
-  field_all_day: true
+  content_moderation_control: true
   field_body_content: true
   field_end_date: true
-  field_end_time: true
   field_event_location: true
+  field_featured_media: true
   field_group: true
   field_legacy_path: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   field_start_date: true
-  field_start_time: true
   field_summary: true
+  links: true
