POWR-983 Update event search result display date and time format

--- a/web/sites/default/config/core.entity_view_display.node.event.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.search_result.yml
@@ -57,16 +57,16 @@ content:
     type: datetime_default
     weight: 3
     region: content
-    label: inline
+    label: hidden
     settings:
       timezone_override: ''
-      format_type: medium
+      format_type: month_day_year
     third_party_settings:
       ds:
         ft:
           id: default
           settings:
-            lb: Ends
+            lb: ''
             lb-col: false
             classes: {  }
   field_end_time:
@@ -75,22 +75,29 @@ content:
     region: content
     label: hidden
     settings:
-      time_format: 'h:i a'
-    third_party_settings: {  }
-  field_start_date:
-    type: datetime_default
-    weight: 1
-    region: content
-    label: inline
-    settings:
-      timezone_override: ''
-      format_type: medium
+      time_format: 'g:i a'
     third_party_settings:
       ds:
         ft:
           id: default
           settings:
-            lb: Starts
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_start_date:
+    type: datetime_default
+    weight: 1
+    region: content
+    label: hidden
+    settings:
+      timezone_override: ''
+      format_type: month_day_year
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
             lb-col: false
             classes: {  }
   field_start_time:
@@ -99,8 +106,15 @@ content:
     region: content
     label: hidden
     settings:
-      time_format: 'h:i a'
-    third_party_settings: {  }
+      time_format: 'g:i a'
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_summary:
     weight: 0
     label: hidden
