--- a/web/sites/default/config/search_api.server.searchstax.yml
+++ b/web/sites/default/config/search_api.server.searchstax.yml
@@ -13,8 +13,8 @@ backend_config:
   connector_config:
     scheme: https
     host: 'null'
-    port: '443'
-    path: /solr
+    port: 443
+    path: /
     core: ''
     timeout: 5
     index_timeout: 5
@@ -34,3 +34,5 @@ backend_config:
   domain: generic
   finalize_timeout: 30
   server_prefix: ''
+  optimize: false
+  disabled_field_types: {  }
