--- a/web/sites/default/config/search_api_solr.solr_field_type.text_edge_und_7_0_0.yml
+++ b/web/sites/default/config/search_api_solr.solr_field_type.text_edge_und_7_0_0.yml
@@ -1,22 +1,26 @@
-uuid: 97a020e8-0f32-483c-985c-c53884903777
+uuid: e603df8d-f719-4b74-8625-ccb874a57958
 langcode: en
 status: true
 dependencies: {  }
 _core:
-  default_config_hash: WpLFwsk7duNa2sQ1G_KO16bKL06d1JVveVjbkG9u5DI
-id: text_phonetic_und_7_0_0
-label: 'Fulltext Phonetic'
+  default_config_hash: edn4g9huIbBonsmj_ZVT_ASjxhb-m9P7qL4zSNgQ_t8
+id: text_edge_und_7_0_0
+label: 'Edge NGram Text Field'
 minimum_solr_version: 7.0.0
-custom_code: phonetic
+custom_code: edge
 field_type_language_code: und
 domains: {  }
 field_type:
-  name: text_phonetic_und
+  name: text_edge
   class: solr.TextField
   positionIncrementGap: 100
   analyzers:
     -
       type: index
+      charFilters:
+        -
+          class: solr.MappingCharFilterFactory
+          mapping: accents_und.txt
       tokenizer:
         class: solr.WhitespaceTokenizerFactory
       filters:
@@ -41,44 +45,26 @@ field_type:
         -
           class: solr.LowerCaseFilterFactory
         -
-          class: solr.BeiderMorseFilterFactory
-          languageSet: auto
-          nameType: GENERIC
-          ruleType: APPROX
-          concat: true
-        -
           class: solr.RemoveDuplicatesTokenFilterFactory
+        -
+          class: solr.EdgeNGramFilterFactory
+          minGramSize: 2
+          maxGramSize: 25
     -
       type: query
+      charFilters:
+        -
+          class: solr.MappingCharFilterFactory
+          mapping: accents_und.txt
       tokenizer:
         class: solr.WhitespaceTokenizerFactory
       filters:
-        -
-          class: solr.StopFilterFactory
-          ignoreCase: true
-          words: stopwords_und.txt
-        -
-          class: solr.WordDelimiterGraphFilterFactory
-          catenateNumbers: 0
-          generateNumberParts: 1
-          protected: protwords_und.txt
-          splitOnCaseChange: 0
-          generateWordParts: 1
-          preserveOriginal: 1
-          catenateAll: 0
-          catenateWords: 0
         -
           class: solr.LengthFilterFactory
           min: 2
           max: 100
         -
           class: solr.LowerCaseFilterFactory
-        -
-          class: solr.BeiderMorseFilterFactory
-          languageSet: auto
-          nameType: GENERIC
-          ruleType: APPROX
-          concat: true
         -
           class: solr.RemoveDuplicatesTokenFilterFactory
 unstemmed_field_type: null
