--- a/web/sites/default/config/search_api_solr.solr_field_type.text_ngram_und_6_0_0.yml
+++ b/web/sites/default/config/search_api_solr.solr_field_type.text_ngram_und_6_0_0.yml
@@ -1,22 +1,26 @@
-uuid: 97a020e8-0f32-483c-985c-c53884903777
+uuid: cff4b26b-0bf9-4f4c-978e-5ea61690f9f0
 langcode: en
 status: true
 dependencies: {  }
 _core:
-  default_config_hash: WpLFwsk7duNa2sQ1G_KO16bKL06d1JVveVjbkG9u5DI
-id: text_phonetic_und_7_0_0
-label: 'Fulltext Phonetic'
-minimum_solr_version: 7.0.0
-custom_code: phonetic
+  default_config_hash: R-qv3m6WSi8tTmAcAyQK2adAXRPW4xLrmkIFbqIVmvc
+id: text_ngram_und_6_0_0
+label: 'NGram Text Field'
+minimum_solr_version: 6.0.0
+custom_code: ngram
 field_type_language_code: und
 domains: {  }
 field_type:
-  name: text_phonetic_und
+  name: text_ngram
   class: solr.TextField
   positionIncrementGap: 100
   analyzers:
     -
       type: index
+      charFilters:
+        -
+          class: solr.MappingCharFilterFactory
+          mapping: accents_und.txt
       tokenizer:
         class: solr.WhitespaceTokenizerFactory
       filters:
@@ -25,7 +29,7 @@ field_type:
           ignoreCase: true
           words: stopwords_und.txt
         -
-          class: solr.WordDelimiterGraphFilterFactory
+          class: solr.WordDelimiterFilterFactory
           catenateNumbers: 1
           generateNumberParts: 1
           protected: protwords_und.txt
@@ -41,44 +45,26 @@ field_type:
         -
           class: solr.LowerCaseFilterFactory
         -
-          class: solr.BeiderMorseFilterFactory
-          languageSet: auto
-          nameType: GENERIC
-          ruleType: APPROX
-          concat: true
-        -
           class: solr.RemoveDuplicatesTokenFilterFactory
+        -
+          class: solr.NGramFilterFactory
+          minGramSize: 2
+          maxGramSize: 25
     -
       type: query
+      charFilters:
+        -
+          class: solr.MappingCharFilterFactory
+          mapping: accents_und.txt
       tokenizer:
         class: solr.WhitespaceTokenizerFactory
       filters:
-        -
-          class: solr.StopFilterFactory
-          ignoreCase: true
-          words: stopwords_und.txt
-        -
-          class: solr.WordDelimiterGraphFilterFactory
-          catenateNumbers: 0
-          generateNumberParts: 1
-          protected: protwords_und.txt
-          splitOnCaseChange: 0
-          generateWordParts: 1
-          preserveOriginal: 1
-          catenateAll: 0
-          catenateWords: 0
         -
           class: solr.LengthFilterFactory
           min: 2
           max: 100
         -
           class: solr.LowerCaseFilterFactory
-        -
-          class: solr.BeiderMorseFilterFactory
-          languageSet: auto
-          nameType: GENERIC
-          ruleType: APPROX
-          concat: true
         -
           class: solr.RemoveDuplicatesTokenFilterFactory
 unstemmed_field_type: null
