PWOR-1042 Add featured view

--- a/web/modules/custom/portland/portland.links.task.yml
+++ b/web/modules/custom/portland/portland.links.task.yml
@@ -21,6 +21,11 @@ portland.add_media:
   base_route: 'entity.group.canonical'
   route_name: 'entity.group_content.group_media_add_page'
   weight: 170
+portland.add_featured_news:
+  title: 'Featured Content'
+  base_route: 'entity.group.canonical'
+  route_name: 'view.group_featured_news_and_events.page_1'
+  weight: 180
 portland.media_table_vbo:
   title: 'Media table VBO'
   parent_id: entity.media.collection
