POWR-1042 Move featured fields to Group content

--- a/web/sites/default/config/core.entity_view_display.node.news.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.related.yml
@@ -5,14 +5,13 @@ dependencies:
   config:
     - core.entity_view_mode.node.related
     - field.field.node.news.field_body_content
-    - field.field.node.news.field_feature_this_content
-    - field.field.node.news.field_feature_until
     - field.field.node.news.field_featured_media
     - field.field.node.news.field_group
     - field.field.node.news.field_legacy_path
     - field.field.node.news.field_published_on
     - field.field.node.news.field_related_content
     - field.field.node.news.field_reviewer
+    - field.field.node.news.field_search_keywords
     - field.field.node.news.field_summary
     - field.field.node.news.field_topics
     - node.type.news
@@ -87,13 +86,12 @@ content:
 hidden:
   content_moderation_control: true
   field_body_content: true
-  field_feature_this_content: true
-  field_feature_until: true
   field_group: true
   field_legacy_path: true
   field_published_on: true
   field_related_content: true
   field_reviewer: true
+  field_search_keywords: true
   field_summary: true
   field_topics: true
   links: true
