--- a/web/sites/default/config/field.storage.group_content.field_feature_this_content.yml
+++ b/web/sites/default/config/field.storage.group_content.field_feature_this_content.yml
@@ -1,21 +1,19 @@
-uuid: 7cbdd803-6f8b-4ae2-82e8-e6f0e65c61da
+uuid: e1cd43cd-bc8f-4842-869e-1e1f7a31b3a6
 langcode: en
 status: true
 dependencies:
   module:
-    - datetime
     - field_permissions
-    - node
+    - group
 third_party_settings:
   field_permissions:
     permission_type: public
-id: node.field_feature_until
-field_name: field_feature_until
-entity_type: node
-type: datetime
-settings:
-  datetime_type: datetime
-module: datetime
+id: group_content.field_feature_this_content
+field_name: field_feature_this_content
+entity_type: group_content
+type: boolean
+settings: {  }
+module: core
 locked: false
 cardinality: 1
 translatable: true
