--- a/web/sites/default/config/field.storage.group_content.field_feature_until.yml
+++ b/web/sites/default/config/field.storage.group_content.field_feature_until.yml
@@ -1,19 +1,21 @@
-uuid: d4056fb5-9df8-4b6a-942c-e1fd35b4cfcd
+uuid: 551db1f5-e585-4c54-8147-fb352c2c1ee0
 langcode: en
 status: true
 dependencies:
   module:
+    - datetime
     - field_permissions
-    - node
+    - group
 third_party_settings:
   field_permissions:
     permission_type: public
-id: node.field_feature_this_content
-field_name: field_feature_this_content
-entity_type: node
-type: boolean
-settings: {  }
-module: core
+id: group_content.field_feature_until
+field_name: field_feature_until
+entity_type: group_content
+type: datetime
+settings:
+  datetime_type: datetime
+module: datetime
 locked: false
 cardinality: 1
 translatable: true
