--- a/web/sites/default/config/field.field.group_content.bureau_office-group_node-news.field_feature_this_content.yml
+++ b/web/sites/default/config/field.field.group_content.bureau_office-group_node-news.field_feature_this_content.yml
@@ -1,27 +1,27 @@
-uuid: 6726fac5-124d-4225-b2fd-283a738efe89
+uuid: d5efad45-6c77-40f6-a942-445c034d03d1
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_feature_this_content
-    - node.type.news
+    - field.storage.group_content.field_feature_this_content
+    - group.content_type.bureau_office-group_node-news
   module:
     - custom_add_another
 third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: node.news.field_feature_this_content
+id: group_content.bureau_office-group_node-news.field_feature_this_content
 field_name: field_feature_this_content
-entity_type: node
-bundle: news
+entity_type: group_content
+bundle: bureau_office-group_node-news
 label: 'Feature this content'
-description: 'Content in your site can be featured to appear at the top of lists until a specified date in the future.'
+description: ''
 required: false
 translatable: false
 default_value:
   -
-    value: 0
+    value: 1
 default_value_callback: ''
 settings:
   on_label: 'On'
