--- a/web/sites/default/config/field.field.group_content.bureau_office-group_node-news.field_feature_until.yml
+++ b/web/sites/default/config/field.field.group_content.bureau_office-group_node-news.field_feature_until.yml
@@ -1,10 +1,10 @@
-uuid: 1f6fe02c-b8d2-415e-b5f7-b7fc50d95c99
+uuid: 340e72cd-8935-482b-bcee-031626c6090f
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_feature_until
-    - node.type.news
+    - field.storage.group_content.field_feature_until
+    - group.content_type.bureau_office-group_node-news
   module:
     - custom_add_another
     - datetime
@@ -12,18 +12,18 @@ third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: node.news.field_feature_until
+id: group_content.bureau_office-group_node-news.field_feature_until
 field_name: field_feature_until
-entity_type: node
-bundle: news
+entity_type: group_content
+bundle: bureau_office-group_node-news
 label: 'Feature until'
-description: 'You must select feature this content for this date to be used.'
+description: ''
 required: false
 translatable: false
 default_value:
   -
-    default_date_type: relative
-    default_date: 'now +30 days'
+    default_date_type: now
+    default_date: now
     field_defaults:
       update_defaults: 0
       no_overwrite: 0
