--- a/web/sites/default/config/group.content_type.project-group_node-news.yml
+++ b/web/sites/default/config/group.content_type.project-group_node-news.yml
@@ -16,4 +16,4 @@ content_plugin: 'group_node:news'
 plugin_config:
   group_cardinality: 1
   entity_cardinality: 1
-  use_creation_wizard: false
+  use_creation_wizard: true
