--- a/web/sites/default/config/group.role.bureau_office-admin.yml
+++ b/web/sites/default/config/group.role.bureau_office-admin.yml
@@ -36,69 +36,75 @@ permissions:
   21: 'view unpublished group_node:news entity'
   22: 'create group_node:news content'
   23: 'view group_node:news content'
-  34: 'delete any group_node:event entity'
-  35: 'delete own group_node:event entity'
-  36: 'update any group_node:event entity'
-  37: 'update own group_node:event entity'
-  38: 'view group_node:event entity'
-  39: 'view unpublished group_node:event entity'
-  40: 'create group_node:event content'
-  41: 'view group_node:event content'
-  42: 'create group_media:document entity'
-  43: 'delete any group_media:document entity'
-  44: 'delete own group_media:document entity'
-  45: 'update any group_media:document entity'
-  46: 'update own group_media:document entity'
-  47: 'view group_media:document entity'
-  48: 'view unpublished group_media:document entity'
-  49: 'create group_media:document content'
-  50: 'view group_media:document content'
-  51: 'create group_media:image entity'
-  52: 'delete any group_media:image entity'
-  53: 'delete own group_media:image entity'
-  54: 'update any group_media:image entity'
-  55: 'update own group_media:image entity'
-  56: 'view group_media:image entity'
-  57: 'view unpublished group_media:image entity'
-  58: 'create group_media:image content'
-  59: 'view group_media:image content'
-  60: 'create group_media:video entity'
-  61: 'delete any group_media:video entity'
-  62: 'delete own group_media:video entity'
-  63: 'update any group_media:video entity'
-  64: 'update own group_media:video entity'
-  65: 'view group_media:video entity'
-  66: 'view unpublished group_media:video entity'
-  67: 'create group_media:video content'
-  68: 'view group_media:video content'
-  69: 'access group_media overview'
-  70: 'create group_node:notification entity'
-  71: 'delete any group_node:notification entity'
-  72: 'delete own group_node:notification entity'
-  73: 'update any group_node:notification entity'
-  74: 'update own group_node:notification entity'
-  75: 'view group_node:notification entity'
-  76: 'view unpublished group_node:notification entity'
-  77: 'create group_node:notification content'
-  78: 'view group_node:notification content'
-  79: 'create group_media:audio entity'
-  80: 'delete any group_media:audio entity'
-  81: 'delete own group_media:audio entity'
-  82: 'update any group_media:audio entity'
-  83: 'update own group_media:audio entity'
-  84: 'view group_media:audio entity'
-  85: 'view unpublished group_media:audio entity'
-  86: 'create group_media:audio content'
-  87: 'create group_node:page entity'
-  88: 'delete any group_node:page entity'
-  89: 'view group_node:page entity'
-  90: 'view unpublished group_node:page entity'
-  91: 'create group_node:page content'
-  92: 'create group_node:event entity'
-  93: 'create group_node:news entity'
-  137: 'delete own group_node:development_permit entity'
-  138: 'update any group_node:development_permit entity'
-  139: 'update own group_node:development_permit entity'
-  140: 'view group_node:development_permit entity'
-  141: 'view unpublished group_node:development_permit entity'
-  142: 'create group_node:development_permit content'
+  24: 'delete any group_node:event entity'
+  25: 'delete own group_node:event entity'
+  26: 'update any group_node:event entity'
+  27: 'update own group_node:event entity'
+  28: 'view group_node:event entity'
+  29: 'view unpublished group_node:event entity'
+  30: 'create group_node:event content'
+  31: 'view group_node:event content'
+  32: 'create group_media:document entity'
+  33: 'delete any group_media:document entity'
+  34: 'delete own group_media:document entity'
+  35: 'update any group_media:document entity'
+  36: 'update own group_media:document entity'
+  37: 'view group_media:document entity'
+  38: 'view unpublished group_media:document entity'
+  39: 'create group_media:document content'
+  40: 'view group_media:document content'
+  41: 'create group_media:image entity'
+  42: 'delete any group_media:image entity'
+  43: 'delete own group_media:image entity'
+  44: 'update any group_media:image entity'
+  45: 'update own group_media:image entity'
+  46: 'view group_media:image entity'
+  47: 'view unpublished group_media:image entity'
+  48: 'create group_media:image content'
+  49: 'view group_media:image content'
+  50: 'create group_media:video entity'
+  51: 'delete any group_media:video entity'
+  52: 'delete own group_media:video entity'
+  53: 'update any group_media:video entity'
+  54: 'update own group_media:video entity'
+  55: 'view group_media:video entity'
+  56: 'view unpublished group_media:video entity'
+  57: 'create group_media:video content'
+  58: 'view group_media:video content'
+  59: 'access group_media overview'
+  60: 'create group_node:notification entity'
+  61: 'delete any group_node:notification entity'
+  62: 'delete own group_node:notification entity'
+  63: 'update any group_node:notification entity'
+  64: 'update own group_node:notification entity'
+  65: 'view group_node:notification entity'
+  66: 'view unpublished group_node:notification entity'
+  67: 'create group_node:notification content'
+  68: 'view group_node:notification content'
+  69: 'create group_media:audio entity'
+  70: 'delete any group_media:audio entity'
+  71: 'delete own group_media:audio entity'
+  72: 'update any group_media:audio entity'
+  73: 'update own group_media:audio entity'
+  74: 'view group_media:audio entity'
+  75: 'view unpublished group_media:audio entity'
+  76: 'create group_media:audio content'
+  77: 'create group_node:page entity'
+  78: 'delete any group_node:page entity'
+  79: 'view group_node:page entity'
+  80: 'view unpublished group_node:page entity'
+  81: 'create group_node:page content'
+  82: 'create group_node:event entity'
+  83: 'create group_node:news entity'
+  84: 'delete own group_node:development_permit entity'
+  85: 'update any group_node:development_permit entity'
+  86: 'update own group_node:development_permit entity'
+  87: 'view group_node:development_permit entity'
+  88: 'view unpublished group_node:development_permit entity'
+  89: 'create group_node:development_permit content'
+  90: 'delete any group_node:event content'
+  91: 'delete own group_node:event content'
+  92: 'delete any group_node:news content'
+  93: 'delete own group_node:news content'
+  164: 'update any group_node:news content'
+  165: 'update own group_node:news content'
