--- a/web/sites/default/config/pathauto.pattern.group_news.yml
+++ b/web/sites/default/config/pathauto.pattern.group_news.yml
@@ -7,16 +7,16 @@ dependencies:
 id: group_news
 label: 'Group news'
 type: 'canonical_entities:node'
-pattern: '[node:group:field_shortname_or_acronym]/news/[node:title]'
+pattern: '[node:field_group:entity:field_shortname_or_acronym]/news/[node:title]'
 selection_criteria:
-  76d37fba-9d4b-45f4-a04c-654bd277f2a5:
+  72d89af5-916f-40d7-bc96-d232461e1a89:
     id: node_type
     bundles:
       news: news
     negate: false
     context_mapping:
       node: node
-    uuid: 76d37fba-9d4b-45f4-a04c-654bd277f2a5
+    uuid: 72d89af5-916f-40d7-bc96-d232461e1a89
 selection_logic: and
 weight: -8
 relationships: {  }
