--- a/web/sites/default/config/views.view.group_news.yml
+++ b/web/sites/default/config/views.view.group_news.yml
@@ -5,10 +5,8 @@ dependencies:
   config:
     - core.entity_view_mode.node.featured
     - core.entity_view_mode.node.teaser
-    - field.storage.node.field_body
   module:
     - datetime
-    - entity_reference_revisions
     - group
     - node
     - user
@@ -418,54 +416,11 @@ display:
           expose:
             operator: ''
           group: 1
-        field_feature_until_value:
-          id: field_feature_until_value
-          table: node__field_feature_until
-          field: field_feature_until_value
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: '>='
-          value:
-            min: ''
-            max: ''
-            value: now
-            type: date
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            placeholder: ''
-            min_placeholder: ''
-            max_placeholder: ''
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          plugin_id: datetime
         field_feature_this_content_value:
           id: field_feature_this_content_value
-          table: node__field_feature_this_content
+          table: group_content__field_feature_this_content
           field: field_feature_this_content_value
-          relationship: none
+          relationship: group_content
           group_type: group
           admin_label: ''
           operator: '='
@@ -497,6 +452,49 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           plugin_id: boolean
+        field_feature_until_value:
+          id: field_feature_until_value
+          table: group_content__field_feature_until
+          field: field_feature_until_value
+          relationship: group_content
+          group_type: group
+          admin_label: ''
+          operator: '>='
+          value:
+            min: ''
+            max: ''
+            value: now
+            type: offset
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: datetime
       defaults:
         filters: false
         filter_groups: false
@@ -611,11 +609,11 @@ display:
           plugin_id: boolean
           entity_type: node
           entity_field: status
-        field_feature_this_content_value:
-          id: field_feature_this_content_value
-          table: node__field_feature_this_content
+        field_feature_this_content_value_1:
+          id: field_feature_this_content_value_1
+          table: group_content__field_feature_this_content
           field: field_feature_this_content_value
-          relationship: none
+          relationship: group_content
           group_type: group
           admin_label: ''
           operator: '='
@@ -647,11 +645,11 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           plugin_id: boolean
-        field_feature_until_value:
-          id: field_feature_until_value
-          table: node__field_feature_until
+        field_feature_until_value_1:
+          id: field_feature_until_value_1
+          table: group_content__field_feature_until
           field: field_feature_until_value
-          relationship: none
+          relationship: group_content
           group_type: group
           admin_label: ''
           operator: '>='
@@ -1215,6 +1213,4 @@ display:
         - url
         - 'user.node_grants:view'
         - user.permissions
-      tags:
-        - 'config:field.storage.node.field_body'
-        - extensions
+      tags: {  }
