POWR-893 removed clock icon and display updated datetime

--- a/web/sites/default/config/views.view.admin_group_content.yml
+++ b/web/sites/default/config/views.view.admin_group_content.yml
@@ -832,7 +832,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<span class=\"text-nowrap\"><i class=\"fa fa-clock\" aria-hidden=\"true\" title=\"{{ changed }}\" data-toggle=\"tooltip\"></i>\r\n{{ is_locked }}\r\n{{ revision_uid }}\r\n</span>"
+            text: "<span class=\"text-nowrap\">{{ changed }}<br>\r\n{{ is_locked }}\r\n{{ revision_uid }}\r\n</span>"
             make_link: false
             path: ''
             absolute: false
