--- a/web/sites/default/config/config_split.config_split.config_local.yml
+++ b/web/sites/default/config/config_split.config_split.config_local.yml
@@ -7,6 +7,7 @@ label: Local
 description: 'Modules that should only be enabled in local environments.'
 folder: sites/default/config_local
 module:
+  clamav: 0
   devel: 0
   kint: 0
 theme: {  }
