POWR-1069 Add vendor badge e-mail message

--- a/web/sites/default/config/webform.webform.last_thursdays_registration.yml
+++ b/web/sites/default/config/webform.webform.last_thursdays_registration.yml
@@ -238,3 +238,37 @@ handlers:
       sender_mail: ''
       sender_name: ''
       theme_name: ''
+  vendor_badge_email:
+    id: email
+    label: 'Vendor badge email'
+    handler_id: vendor_badge_email
+    status: true
+    conditions: {  }
+    weight: 0
+    settings:
+      states:
+        - completed
+      to_mail: '[webform_submission:values:contact_email:raw]'
+      to_options: {  }
+      cc_mail: ''
+      cc_options: {  }
+      bcc_mail: ''
+      bcc_options: {  }
+      from_mail: noreply@portlandoregon.gov
+      from_options: {  }
+      from_name: 'Last Thursdays on Alberta'
+      subject: 'Last Thursdays on Alberta vendor badge for [webform_submission:values:vendor_name]'
+      body: "<h1>Permit for {{ webform_token('[webform_submission:values:vendor_name]', webform_submission, [], options) }}</h1>\r\n<h2>Vendor type: {{ webform_token('[webform_submission:values:vendor_type]', webform_submission, [], options) }}</h2>\r\n<h1 style=\"font-size: 7em;\">#{{ webform_token('[webform_submission:values:vendor_hash]', webform_submission, [], options) }}</h1>\r\n"
+      excluded_elements: {  }
+      ignore_access: false
+      exclude_empty: true
+      exclude_empty_checkbox: false
+      html: true
+      attachments: false
+      twig: true
+      debug: false
+      reply_to: ''
+      return_path: ''
+      sender_mail: ''
+      sender_name: ''
+      theme_name: ''
