POWR-1069 Update messaging to reference badge

--- a/web/sites/default/config/webform.webform.last_thursdays_registration.yml
+++ b/web/sites/default/config/webform.webform.last_thursdays_registration.yml
@@ -96,7 +96,7 @@ settings:
   draft_loaded_message: ''
   confirmation_type: inline
   confirmation_title: ''
-  confirmation_message: 'Thank you for registering for Last Thursdays on Alberta!&nbsp; Look for an e-mail confirming your registration with your vendor ID.&nbsp; Please print the email out and have it with you when vending at any Last Thursays on Alberta events.'
+  confirmation_message: 'Thank you for registering for Last Thursdays on Alberta!&nbsp; Look for an e-mail confirming your registration and one with your vendor badge.&nbsp; Please print the vendor badge email out and have it with you when vending at any Last Thursdays on Alberta events.'
   confirmation_url: ''
   confirmation_attributes: {  }
   confirmation_back: true
@@ -110,7 +110,7 @@ settings:
   limit_total_unique: false
   limit_user: 1
   limit_user_interval: null
-  limit_user_message: 'You have already registered for Last Thursdays on Alberta. Thank you!&nbsp; Look for an e-mail confirming your registration with your vendor ID.&nbsp; Please print the email out and have it with you when vending at any Last Thursays on Alberta events.'
+  limit_user_message: 'You have already registered for Last Thursdays on Alberta. Thank you!&nbsp; Look for an e-mail confirming your registration and one with your vendor badge.&nbsp; Please print the vendor badge email out and have it with you when vending at any Last Thursdays on Alberta events.'
   limit_user_unique: false
   entity_limit_total: null
   entity_limit_total_interval: null
@@ -189,7 +189,7 @@ handlers:
       from_options: {  }
       from_name: 'Last Thursdays on Alberta'
       subject: 'Registration confirmation for Last Thursdays on Alberta'
-      body: "<p>{{ webform_token('[webform_submission:values:contact_name]', webform_submission) }},</p>\r\n<p>Thank you for registering with Last Thursdays on Alberta. Your registration information is copied below.</p>\r\n{{ webform_token('[webform_submission:values]', webform_submission) }}\r\n<p>Before vending, we recommend checking in with the adjacent business to let them know your plan for the evening. We ask that set-up not begin until 5:00.  From 5:00-6:00, traffic will be free-flowing on Alberta. Do not place anything into the moving travel lane. All intersections must remain clear at all times so that emergency vehicles can access the event in case of emergency. All set up must take place from the sidewalk side. Please do not block the travel lane for loading or unloading your vehicle.</p>\r\n<p>If you have any questions or concerns, please contact Greg Raisman, City of Portland Bureau of Transportation, at <a href=\"mailto:greg.raisman@portlandoregon.gov\">greg.raisman@portlandoregon.gov</a> or <a href=\"tel:503-823-1052\">503-823-1052</a>.</p>\r\n<p>The City of Portland complies with all non‐discrimination, Civil Rights laws including Civil Rights Title VI and ADA Title II. To help ensure equal access to City programs, services and activities, the City of Portland will reasonably modify policies/procedures and provide auxiliary aids/services to persons with disabilities. Call 503-823-2036, TTY 503-823-6868 or Oregon Relay Service: 711 with such requests, or visit http://bit.ly/13EWaCg</p>\r\n\r\n"
+      body: "<p>{{ webform_token('[webform_submission:values:contact_name]', webform_submission) }},</p>\r\n<p>Thank you for registering with Last Thursdays on Alberta. Your registration information is copied below. You will also receive a vendor badge e-mail. Please print that e-mail out and make it visible at your vending location while vending at Last Thursday.</p>\r\n{{ webform_token('[webform_submission:values]', webform_submission) }}\r\n<p>Before vending, we recommend checking in with the adjacent business to let them know your plan for the evening. We ask that set-up not begin until 5:00.  From 5:00-6:00, traffic will be free-flowing on Alberta. Do not place anything into the moving travel lane. All intersections must remain clear at all times so that emergency vehicles can access the event in case of emergency. All set up must take place from the sidewalk side. Please do not block the travel lane for loading or unloading your vehicle.</p>\r\n<p>If you have any questions or concerns, please contact Greg Raisman, City of Portland Bureau of Transportation, at <a href=\"mailto:greg.raisman@portlandoregon.gov\">greg.raisman@portlandoregon.gov</a> or <a href=\"tel:503-823-1052\">503-823-1052</a>.</p>\r\n<p>The City of Portland complies with all non‐discrimination, Civil Rights laws including Civil Rights Title VI and ADA Title II. To help ensure equal access to City programs, services and activities, the City of Portland will reasonably modify policies/procedures and provide auxiliary aids/services to persons with disabilities. Call 503-823-2036, TTY 503-823-6868 or Oregon Relay Service: 711 with such requests, or visit <a href=\"http://bit.ly/13EWaCg\">http://bit.ly/13EWaCg</a></p>\r\n\r\n"
       excluded_elements:
         accept_requirements: accept_requirements
       ignore_access: false
@@ -223,7 +223,7 @@ handlers:
       from_mail: _default
       from_options: {  }
       from_name: _default
-      subject: 'New vendor registration for Last Thursdays on Alberta'
+      subject: 'New vendor registration for Last Thursdays on Alberta: [webform_submission:values:vendor_name]'
       body: "<p>Submitted on {{ webform_token('[webform_submission:created]', webform_submission) }}</p>\r\n{{ webform_token('[webform_submission:values]', webform_submission) }}\r\n"
       excluded_elements: {  }
       ignore_access: false
