--- a/web/sites/default/config/entity_browser.browser.media_browser.yml
+++ b/web/sites/default/config/entity_browser.browser.media_browser.yml
@@ -5,40 +5,28 @@ dependencies:
   config:
     - views.view.media
   module:
-    - lightning_media
+    - entity_browser_entity_form
     - views
 _core:
   default_config_hash: kT3o2OhRMWgZX6kGxRYSsItntaw241e3UwpGCD3RpJE
 name: media_browser
 label: 'Media browser'
-display: iframe
+display: modal
 display_configuration:
-  width: 100%
-  height: '640'
-  link_text: 'Select entities'
-  auto_open: true
-selection_display: no_display
-selection_display_configuration: {  }
+  width: ''
+  height: ''
+  link_text: 'Select media'
+  auto_open: false
+selection_display: multi_step_display
+selection_display_configuration:
+  entity_type: media
+  display: label
+  display_settings: {  }
+  select_text: 'Use selected'
+  selection_hidden: false
 widget_selector: tabs
 widget_selector_configuration: {  }
 widgets:
-  8b142f33-59d1-47b1-9e3a-4ae85d8376fa:
-    settings:
-      submit_text: Place
-      form_mode: media_browser
-    uuid: 8b142f33-59d1-47b1-9e3a-4ae85d8376fa
-    weight: -8
-    label: 'Create embed'
-    id: embed_code
-  044d2af7-314b-4830-8b6d-64896bbb861e:
-    settings:
-      submit_text: Place
-      form_mode: media_browser
-      return_file: false
-    uuid: 044d2af7-314b-4830-8b6d-64896bbb861e
-    weight: -9
-    label: Upload
-    id: file_upload
   af6edb39-7d23-4cec-95fa-4eb339650fda:
     settings:
       view: media
@@ -49,3 +37,13 @@ widgets:
     weight: -10
     label: Library
     id: view
+  2a247d7c-a5e9-4ded-b248-295cc5e70cd6:
+    settings:
+      entity_type: media
+      bundle: image
+      form_mode: media_library
+      submit_text: 'Save image'
+    uuid: 2a247d7c-a5e9-4ded-b248-295cc5e70cd6
+    weight: 3
+    label: 'Add image'
+    id: entity_form
