--- a/web/sites/default/config/field.storage.group.field_summary.yml
+++ b/web/sites/default/config/field.storage.group.field_summary.yml
@@ -3,7 +3,11 @@ langcode: en
 status: true
 dependencies:
   module:
+    - field_permissions
     - group
+third_party_settings:
+  field_permissions:
+    permission_type: public
 id: group.field_summary
 field_name: field_summary
 entity_type: group
