POWR-784 add displays and update seach result twig template.

--- a/web/sites/default/config/core.entity_view_display.group.group.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.group.group.search_result.yml
@@ -1,8 +1,9 @@
-uuid: 227ba643-37fb-4f79-a48b-de55aef90785
+uuid: 1b0748a8-0c25-4612-b445-7c4ec0bc4a7c
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.group.search_result
     - field.field.group.group.field_featured_content
     - field.field.group.group.field_featured_groups
     - field.field.group.group.field_featured_media
@@ -16,50 +17,17 @@ dependencies:
     - group.type.group
   module:
     - ds
-id: group.group.default
+id: group.group.search_result
 targetEntityType: group
 bundle: group
-mode: default
+mode: search_result
 content:
-  field_featured_content:
-    weight: 3
-    label: above
-    settings:
-      view_mode: featured
-      link: false
-    third_party_settings:
-      ds:
-        ds_limit: ''
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
-    type: entity_reference_entity_view
-    region: content
-  field_featured_groups:
-    weight: 4
-    label: above
-    settings:
-      view_mode: featured
-      link: false
-    third_party_settings:
-      ds:
-        ds_limit: ''
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
-    type: entity_reference_entity_view
-    region: content
-  field_featured_media:
+  field_group_type:
+    type: entity_reference_label
     weight: 0
+    region: content
     label: hidden
     settings:
-      view_mode: banner
       link: false
     third_party_settings:
       ds:
@@ -69,29 +37,32 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
-    type: entity_reference_entity_view
-    region: content
   field_summary:
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
     region: content
-  group_site_menu_entity_view_1:
-    weight: 2
+  label:
+    label: hidden
+    type: string
+    weight: 1
     region: content
-    settings: {  }
+    settings:
+      link_to_entity: false
     third_party_settings: {  }
 hidden:
   changed: true
   created: true
-  field_group_type: true
+  field_featured_content: true
+  field_featured_groups: true
+  field_featured_media: true
   field_legacy_path: true
   field_menu_link: true
   field_official_organization_name: true
   field_phone: true
   field_shortname_or_acronym: true
-  label: true
+  group_site_menu_entity_view_1: true
   uid: true
