--- a/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
+++ b/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
@@ -23,19 +23,18 @@ style: view_modes
 view_mode_configuration:
   'entity:group_bureau_office': search_result
   'entity:group_elected_official': search_result
+  'entity:group_group': search_result
   'entity:group_program': search_result
   'entity:group_project': search_result
-  'entity:node_charter_article': default
-  'entity:node_charter_chapter': default
-  'entity:node_charter_section': default
+  'entity:node_charter_article': search_result
+  'entity:node_charter_chapter': search_result
+  'entity:node_charter_section': search_result
   'entity:node_city_service': search_result
-  'entity:node_code_chapter': default
-  'entity:node_code_section': default
-  'entity:node_code_title': default
+  'entity:node_code_chapter': search_result
+  'entity:node_code_section': search_result
+  'entity:node_code_title': search_result
   'entity:node_development_permit': search_result
   'entity:node_event': search_result
-  'entity:node_guide': search_result
-  'entity:node_information': search_result
   'entity:node_news': search_result
   'entity:node_page': search_result
   'entity:taxonomy_term_audience': search_result
