--- a/web/sites/default/config/field.field.group.elected_official.field_featured_groups.yml
+++ b/web/sites/default/config/field.field.group.elected_official.field_featured_groups.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.storage.group.field_featured_groups
     - group.type.bureau_office
     - group.type.elected_official
+    - group.type.group
     - group.type.program
     - group.type.project
   module:
@@ -29,6 +30,7 @@ settings:
   handler_settings:
     target_bundles:
       bureau_office: bureau_office
+      group: group
       program: program
       project: project
     sort:
