--- a/web/sites/default/config/field.field.group.project.field_featured_groups.yml
+++ b/web/sites/default/config/field.field.group.project.field_featured_groups.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.group.field_featured_groups
     - group.type.bureau_office
+    - group.type.group
     - group.type.program
     - group.type.project
   module:
@@ -28,6 +29,7 @@ settings:
   handler_settings:
     target_bundles:
       bureau_office: bureau_office
+      group: group
       program: program
       project: project
     sort:
