POWR-893 updated badge colors, moved lock icon

--- a/web/sites/default/config/views.view.admin_group_content.yml
+++ b/web/sites/default/config/views.view.admin_group_content.yml
@@ -265,8 +265,8 @@ display:
           type: boolean
           settings:
             format: custom
-            format_custom_true: '<span class="status-badge status-published" title="Published"><i class="fa fa-circle" aria-hidden="true"></i></span>'
-            format_custom_false: '<span class="status-badge status-unpublished" title="Unpublished"><i class="fa fa-circle" aria-hidden="true"></i></span>'
+            format_custom_true: '<span class="status-published" title="This page is live"><i class="fa fa-circle" aria-hidden="true"></i></span>'
+            format_custom_false: '<span class="status-unpublished" title="This page is not live"><i class="fa fa-circle" aria-hidden="true"></i></span>'
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -421,7 +421,7 @@ display:
           exclude: true
           alter:
             alter_text: true
-            text: '<br />{{ field_reviewer }}'
+            text: '<br /><span class="text-nowrap">{{ field_reviewer }}</span>'
             make_link: false
             path: ''
             absolute: false
@@ -472,69 +472,6 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          plugin_id: field
-        moderation_state_1:
-          id: moderation_state_1
-          table: node_field_revision
-          field: moderation_state
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: 'Latest revision'
-          exclude: false
-          alter:
-            alter_text: true
-            text: "{% if moderation_state_1 == \"Published\" %}\r\n<span class=\"badge badge-primary\" title=\"{{ moderation_state_1 }}\" data-toggle=\"tooltip\">{{ moderation_state_1 }}</span>\r\n{% elseif moderation_state_1 == \"In review\" %}\r\n<span class=\"badge badge-info\" title=\"{{ moderation_state_1 }}\" data-toggle=\"tooltip\">{{ moderation_state_1 }}</span>\r\n{{ field_reviewer }}\r\n{% else %}\r\n<span class=\"badge badge-light\" title=\"{{ moderation_state_1 }}\" data-toggle=\"tooltip\">{{ moderation_state_1 }}</span>\r\n{% endif %}"
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: true
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: content_moderation_state
-          settings: {  }
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          entity_type: node
           plugin_id: field
         break:
           id: break
@@ -714,7 +651,7 @@ display:
           exclude: true
           alter:
             alter_text: true
-            text: '<a href="/admin/lock/break/node/{{ nid }}/en/%2A"><i class="fa fa-lock" aria-hidden="true" title="Locked since {{ timestamp }}. Click to break lock."></i></a>'
+            text: '<a href="/admin/lock/break/node/{{ nid }}/en/%2A"><i class="fa fa-lock" aria-hidden="true" title="Locked for {{ timestamp }}. Click to break lock."></i></a>'
             make_link: false
             path: ''
             absolute: false
@@ -756,6 +693,69 @@ display:
           type_custom_false: '0'
           not: false
           plugin_id: boolean
+        moderation_state_1:
+          id: moderation_state_1
+          table: node_field_revision
+          field: moderation_state
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: 'Latest revision'
+          exclude: false
+          alter:
+            alter_text: true
+            text: "{% if moderation_state_1 == \"Published\" %}\r\n<span class=\"badge badge-success\" title=\"{{ moderation_state_1 }}\" data-toggle=\"tooltip\">{{ moderation_state_1 }}</span>\r\n{% elseif moderation_state_1 == \"In review\" %}\r\n<span class=\"badge badge-warning\" title=\"{{ moderation_state_1 }}\" data-toggle=\"tooltip\">{{ moderation_state_1 }}</span>\r\n{{ field_reviewer }}\r\n{% elseif moderation_state_1 == \"Unpublished/Archived\" %}\r\n<span class=\"badge badge-danger\" title=\"{{ moderation_state_1 }}\" data-toggle=\"tooltip\">{{ moderation_state_1 }}</span>\r\n{% elseif moderation_state_1 == \"Draft\" %}\r\n<span class=\"badge badge-warning\" title=\"{{ moderation_state_1 }}\" data-toggle=\"tooltip\">{{ moderation_state_1 }}</span>\r\n{% else %}\r\n<span class=\"badge badge-light\" title=\"{{ moderation_state_1 }}\" data-toggle=\"tooltip\">{{ moderation_state_1 }}</span>\r\n{% endif %}\r\n{{ is_locked }}"
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: content_moderation_state
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: node
+          plugin_id: field
         revision_uid:
           id: revision_uid
           table: node_revision
@@ -767,7 +767,7 @@ display:
           exclude: true
           alter:
             alter_text: true
-            text: '{{ revision_uid }}'
+            text: '<span class="text-nowrap">{{ revision_uid }}</span>'
             make_link: false
             path: ''
             absolute: false
@@ -832,7 +832,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<span class=\"text-nowrap\">{{ changed }}<br>\r\n{{ is_locked }}\r\n{{ revision_uid }}\r\n</span>"
+            text: "<span class=\"text-nowrap\">{{ changed }}<br>\r\n{{ revision_uid }}\r\n</span>"
             make_link: false
             path: ''
             absolute: false
